styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* end of css reset */



/* Reset and Base Styles... (existing reset code) */
/* import fonts */
@import url('https://fonts.googleapis.com/css2?family=Habibi&family=Irish+Grover&display=swap');
/* CSS variables */
:root {
    --green: #06A816;
    --orange: #E75D02; 
    --black: #000000;
    --white: #ffffff;

    --fonts: 'Habibi', 'Irish Grover'; 
}

body {
    display: flex; /* Optional: For vertical/horizontal centering */
    flex-direction: column; /* Or row */
    justify-content: center; /* Center vertically */
    align-items: center; /* Center horizontally */
    min-height: 100vh; /* Full viewport height */
    margin: 0;
    font-family: 'Habibi';
	font-size: 1.25;
	text-align: center;
}
main {
    margin: 0 auto; /* Only effective if main has a defined width */
}

h1, h2, h3 {
    font-family: 'Irish Grover';
}

h1 {
	font-size: 2.5em;
	text-shadow: 2px 2px 5px #000000;
	padding-bottom: 20px;
	padding-top: 5px;
}
h2 {
	font-size: 1.75em;
}
h3 {
	font-size: 1.25em;
}

header {
	width: 100%;
	background-color: #06A816;
	color: #ffffff;
	
}
header p {
	padding-bottom: 20px;
	font-style: italic; 
}


@media screen and (min-width: 428px) {
	
	header {
		display: grid;
		grid-template-columns: repeat(3, auto);
		grid-template-rows: repeat(3, auto);
		align-items: center;
	}
	
	 header h1 {
		grid-column: 1;
		grid-row: 1;
		justify-self: start;
		font-size: 1.70em;
		margin-left: 10px;
		padding-top: 10px;
	}
	
	header p {
		grid-column: 3 / 5;
		grid-row: 1;
		justify-self: start;
		font-size: 0.6em;
		margin-right: 10px;
		padding-top: 10px;
	} 
	.container {
		grid-column: 1 / 5;
		grid-row: 3;
	}
	#section1 {
		margin-top: 10px;
		padding-top: 0;
	}
}
@media screen and (min-width: 538px) {
	header p {
		font-size: 1em;
		padding-right: 20px;
		justify-self: end;
	}
}

@media screen and (min-width: 834px) {
	header {
		display: grid;
		grid-template-columns: repeat(3, auto); 
		grid-template-rows: repeat(3, auto);
		width: 100%;
		background-color: #06A816;
		color: #ffffff;
		/* padding: 10px;  */
	}
    header h1 {
		grid-column: 1; 
		margin: 0; 
		grid-row: 1;
        font-size: 2.5em; 
        margin-left: 10px; 
    }

    header p {
		grid-column: 4; 
		grid-row: 1;
		margin: 0; 
		padding-top: 5px;
		padding-right: 20px;
		justify-self: end; 
        font-size: 1em; 
        margin-left: 10px; 
    }
	.container {
		grid-column: 1 / 5;
		grid-row: 3;
	}
	#section1 {
		margin-top: 10px;
		padding-top: 0;
	}
	
}
	
@media screen and (min-width: 1280px) {
	header {
		display: grid;
		grid-template-columns: repeat(3, auto);
		grid-template-rows: repeat(2, auto);
		background-color: #06A816;
	}
	header p {
		grid-column: 1;
		grid-row: 2;
		justify-self: start;
	}
	

}	
	

footer {
    background-color: #06A816; /* Green background for the footer */
    width: 100%; /* Padding for the footer */
	margin-top: 20px;
	line-height: 1.5vh;
}
address {
	padding: 20px 0px;
}

@media screen and (min-width: 428px) {
    .footer {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto;
        gap: 20px; /* Add some space between the columns */
    }
    
    .contact-info, .hours {
        font-size: x-small;
        line-height: 15px;
        text-align: center; /* Center the text */
        color: #ffffff;
        margin: 0; /* Remove default margin */
        padding: 10px 0; /* Padding for spacing */
    }
    
    .contact-info h2, .hours h2 {
        margin: 20px 0; /* Use consistent margins */
    }
}

@media screen and (min-width: 1280px) {
    .footer {
        display: grid;
		grid-template-columns: repeat(2, auto);
		grid-template-rows: auto;
		
    }
	.contact-info {
		display: grid;
		grid-template-columns: repeat(2, auto);
		grid-template-rows: auto;
	}
	.hours {
		display: grid;
		grid-column: 3;
		grid-template-columns: repeat(4, auto);
		grid-template-rows: auto;
		font-size: 0.8em;
		line-height: 1.5em;
	}
	/* .hours-h2 {
		grid-column: 1;
	} */
	.hours-ul {
		grid-column: 3;
		/* justify-self: center; */
	}
	.address {
		grid-column: 4;
		text-align: end;
		font-size: 1.5em;
		line-height: 1.5em;
	}
	.hours-h2 {
		text-align: start;
	}
	
}

.contact-info h2 {
	margin-top: 20px;
}

.contact-info, .hours {
    margin: 0; /* Remove default margin */
    padding: 10px 0; /* Padding for spacing */
    text-align: center; /* Center the text */
	color: #ffffff;
}

.hours h2 {
	margin-bottom: 20px;
}

.copyright {
    background-color: #ffffff; /* White background for the copyright section */
    padding: 10px 0; /* Optional: Add padding for spacing */
    text-align: center; /* Center the copyright text */
    position: relative; /* Positioning context for full width */
    width: 100%; /* Ensure it spans the full width */
    margin-bottom: 0; /* Align to the bottom */
	color:#06A816;
}
/* ... */

